[tool.poetry]
name = "api-server"
version = "0.1.0"
description = "API server for online-chip system"
authors = ["st22182ti <st22182ti@gm.ibaraki-ct.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
uvicorn-worker = "^0.2.0"
gunicorn = "^23.0.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
